<resources>
    <string name="app_name">Hotéis</string>
    <string name="error_hotel_not_found">Hotel Não Encontrado</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_new_hotel">Novo Hotel</string>
    <string name="action_info">Info</string>
    <string name="action_delete">Excluir</string>
    <string name="hint_search">Procurar por Hotel</string>
    <string name="about_title">Dominando o Android</string>
    <string name="about_message">Desenvolvindo por nglauber</string>
    <string name="about_button_site">Site</string>
    <string name="form_label_name">Nome</string>
    <string name="form_label_address">Endereço</string>
    <string name="form_label_rating">Classificação</string>
    <string name="error_invalid_hotel">Hotel não preenchido corretamente</string>
    <string name="message_hotels_deleted">%d itens excluídos.</string>
    <string name="undo">Desfazer</string>
    <string name="action_share">Compartilhar</string>
    <string name="share_text">Me Hospedei no %1$s e o classifiquei em %2$.1f estrelas</string>
    <string name="action_edit">Editar</string>

    
    <plurals name="list_hotel_selected">
        <item quantity="one">1 Selecionado</item>
        <item quantity="other">%d Selecionado</item>
    </plurals>
</resources>